language/move-lang/tests/move_check/typing/recursive_structs_malformed.move
address 0x42 {

module M0 {
    struct Foo { f: (Foo, Foo) }
    struct Bar { f: &Bar }
    struct Baz { f: vector<(&Baz, &mut Baz)> }
}

}
